--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -3,7 +3,7 @@
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
-        android:label="scanner"
+        android:label="Extracom WMS"
         android:icon="@mipmap/ic_launcher"
         android:usesCleartextTraffic="true">
         <activity
