--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,8 @@ dependencies:
 
   assets_audio_player: ^3.0.3+3
 
+  flutter_cache_manager: ^3.1.1
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
