--- a/.github/workflows/flutter-ci.yml
+++ b/.github/workflows/flutter-ci.yml
@@ -1,38 +1,42 @@
 name: Flutter CI
 
-# This workflow is triggered on pushes to the repository.
-
 on:
   push:
     branches:
       - master
 
 jobs:
-  build:
-    # This job will run on ubuntu virtual machine
+  build_apk:
+    name: Build Flutter (Android)
     runs-on: ubuntu-latest
     steps:
-
-      # Setup Java environment in order to build the Android app.
       - uses: actions/checkout@v1
       - uses: actions/setup-java@v1
         with:
           java-version: '12.x'
-
-      # Setup the flutter environment.
       - uses: subosito/flutter-action@v1
         with:
-          channel: 'beta' # 'dev', 'alpha', default to: 'stable'
-          # flutter-version: '1.12.x' # you can also specify exact version of flutter
-
-      # Get flutter dependencies.
+          channel: 'stable' # 'dev', 'alpha', default to: 'stable'
       - run: flutter pub get
-
-      # Build apk.
       - run: flutter build apk --no-sound-null-safety
-
-      # Upload generated apk to the artifacts.
       - uses: actions/upload-artifact@v1
         with:
-          name: release-apk
+          name: android-build
           path: build/app/outputs/apk/release/app-release.apk
+  build_ios:
+    name: Build Flutter (iOS)
+    runs-on: macOS-latest
+    steps:
+      - uses: actions/checkout@v1
+      - uses: actions/setup-java@v1
+        with:
+          java-version: '12.x'
+      - uses: subosito/flutter-action@v1
+        with:
+          channel: 'stable'
+      - run: flutter pub get
+      - run: flutter build ios --release --no-codesign --no-sound-null-safety
+      - uses: actions/upload-artifact@v1
+        with:
+          name: ios-build
+          path: build/ios/iphoneos
