--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,10 @@ dependencies:
 
   provider: ^5.0.0
 
+  f_logs:
+    git:
+      url: git://github.com/draganjovanovic1/Flogs
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
