--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,9 @@ dependencies:
   f_logs:
     git:
       url: git://github.com/draganjovanovic1/Flogs
+  sembast: ^3.1.0+2
+  path: ^1.8.0
+  path_provider: ^2.0.2
 
 dev_dependencies:
   flutter_test:
