--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,6 +54,8 @@ dependencies:
   sembast: ^3.1.0+2
   path: ^1.8.0
   path_provider: ^2.0.2
+  connectivity_plus: ^1.0.6
+  pull_to_refresh: ^2.0.0
 
 dev_dependencies:
   flutter_test:
