--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,7 @@ dependencies:
   path_provider: ^2.0.2
   connectivity_plus: ^1.0.6
   pull_to_refresh: ^2.0.0
+  package_info: ^2.0.2
 
 dev_dependencies:
   flutter_test:
