--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,7 +40,7 @@ dependencies:
 
   flutter_barcode_scanner: ^2.0.0
 
-  assets_audio_player: ^3.0.4+1
+  assets_audio_player: ^3.0.5
 
   flutter_cache_manager: ^3.1.1
 
