--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -5,7 +5,7 @@
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
 
     <application
-        android:label="Extracom WMS"
+        android:label="PowerWMS"
         android:icon="@mipmap/ic_launcher"
         android:usesCleartextTraffic="true">
         <activity
