--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,7 @@ dependencies:
   qr_flutter: ^4.0.0
 
   flutter_keyboard_visibility: ^5.3.0
+  gap: ^2.0.1
 
   f_logs: ^2.0.0
   sembast: ^3.1.0+2
