--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 1.0.0+1
+version: 1.0.1+2
 
 environment:
   sdk: ">=2.12.0 <3.0.0"
@@ -52,7 +52,7 @@ dependencies:
 
   flutter_keyboard_visibility: ^5.3.0
   gap: ^2.0.1
-
+  flutter_svg: ^0.23.0+1
   f_logs: ^2.0.0
   sembast: ^3.1.0+2
   path: ^1.8.0
@@ -61,19 +61,26 @@ dependencies:
   pull_to_refresh: ^2.0.0
   package_info: ^2.0.2
   platform: ^3.1.0
+  tuple: ^2.0.0
+
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   build_runner: ^2.3.3
+  flutter_gen: ^5.2.0
   json_serializable: ^6.6.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
+flutter_gen:
+  integrations:
+    flutter_svg: true
+
 # The following section is specific to Flutter.
 flutter:
-  generate: true
+#  generate: true
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
@@ -83,6 +90,7 @@ flutter:
   assets:
     - assets/error.mp3
     - assets/images/
+    - assets/svg/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
