--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,30 +26,17 @@ dependencies:
   flutter_localizations:
     sdk: flutter
   intl: ^0.17.0
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-
   dio: ^4.0.0
   json_annotation: ^4.0.1
-
   form_field_validator: ^1.1.0
-
   shared_preferences: ^2.0.6
-
   flutter_barcode_scanner: ^2.0.0
-
   assets_audio_player: ^3.0.5
-
   flutter_cache_manager: ^3.1.1
-
   provider: ^5.0.0
-
   sliver_tools: ^0.2.5
-
   qr_flutter: ^4.0.0
-
   flutter_keyboard_visibility: ^5.3.0
   gap: ^2.0.1
   flutter_svg: ^0.23.0+1
@@ -62,6 +49,7 @@ dependencies:
   package_info: ^2.0.2
   platform: ^3.1.0
   tuple: ^2.0.0
+  fluttertoast: ^8.2.1
 
 
 dev_dependencies:
