--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,7 +25,7 @@ dependencies:
     sdk: flutter
   flutter_localizations:
     sdk: flutter
-  intl: ^0.17.0
+  intl: ^0.18.0
   cupertino_icons: ^1.0.2
   dio: ^4.0.0
   json_annotation: ^4.0.1
@@ -40,7 +40,7 @@ dependencies:
   flutter_keyboard_visibility: ^5.3.0
   gap: ^2.0.1
   flutter_svg: ^0.23.0+1
-  f_logs: ^2.0.0
+  logger: ^1.3.0
   sembast: ^3.1.0+2
   path: ^1.8.0
   path_provider: ^2.0.2
