--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,7 +27,7 @@ dependencies:
     sdk: flutter
   intl: ^0.18.0
   cupertino_icons: ^1.0.2
-  dio: ^4.0.0
+  dio: ^5.0.0
   json_annotation: ^4.0.1
   form_field_validator: ^1.1.0
   shared_preferences: ^2.0.6
@@ -50,6 +50,7 @@ dependencies:
   platform: ^3.1.0
   tuple: ^2.0.0
   fluttertoast: ^8.2.1
+  pretty_dio_logger: ^1.3.1
 
 
 dev_dependencies:
