--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,7 @@ dependencies:
   tuple: ^2.0.0
   fluttertoast: ^8.2.1
   pretty_dio_logger: ^1.3.1
+  hive_flutter: ^1.1.0
 
 
 dev_dependencies:
@@ -59,6 +60,7 @@ dev_dependencies:
   build_runner: ^2.3.3
   flutter_gen: ^5.2.0
   json_serializable: ^6.6.1
+  hive_generator: ^2.0.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
